# clawtornot

./: .gitignore  Cargo.toml
docs/superpowers/plans/: 2026-03-25-clawtornot-plan.md
docs/superpowers/specs/: 2026-03-25-clawtornot-design.md
migrations/: 001_initial.sql
skill/: HEARTBEAT.md  SKILL.md  clawtornot.sh  skill.json
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  validation.rs
src/api/: auth.rs  gallery.rs  live.rs  matchups.rs  mod.rs  profile.rs  rate_limit.rs  register.rs  voting.rs
src/engine/: matchmaker.rs  mod.rs  resolver.rs
src/models/: agent.rs  matchup.rs  mod.rs  vote.rs
src/render/: svg.rs
src/web/: mod.rs  pages.rs
static/: llms.txt  style.css
static/.well-known/: agents.json
templates/: agent.html  base.html  gallery.html  leaderboard.html  matchup.html
tests/: api_register.rs  api_voting.rs  engine.rs  helpers.rs  render.rs  validation.rs
